Update slick styles

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         справді хвилювала моя успішність. Вона стала для мене авторитетом,
                         проте я не тремтіла на уроках, маючи страх зробити найменшу помилку.
                         Зараз я можу похизуватись тим, що я студен<span class="text-dots"> ... </span><span
-                            class="long-switch-btn" data-makeLong>Читать дальше</span><span class="continue">тка на бюджеті;
+                            class="long-switch-btn" data-makeLong >Читать дальше</span><span class="continue">тка на бюджеті;
                             дякуючи Олені я змогла пройти конкурс
                             до англомовної групи, де весь навчальний процес проходить виключно
                             англійською. Провчившись лише рік, я маю безліч зустрічей із представниками з Америки та країн
@@ -110,7 +110,7 @@
                             сфері та у
                             сучасному
                             світі загалом.</span>
-                        <span class="short-switch-btn" data-makeShort>Скрыть текст</span>
+                        <span class="short-switch-btn" data-makeShort >Скрыть текст</span>
                     </p>
                 </div>
             </li>
@@ -403,11 +403,9 @@
                     srcset="./images/test7-icon.jpg 1x, ./images/test7-icon@2x.jpg 2x" />
             </li>
         </ul>
-    </section>
-
-
-    <!-- <script src="./js/longer-text.js"></script> -->
+    </section>    
     <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>    
+    <script src="./js/longer-text.js" type="text/javascript" charset="utf-8"></script>
     <script src="./js/slick.min.js" type="text/javascript" charset="utf-8"></script>
     <script src="./js/slider.js" type="text/javascript" charset="utf-8"></script>
     
